# GitFlame-CodeRAG

./: .gitattributes  .gitignore  data_contracts.md  pyproject.toml
configs/: gitflame-codepilot.example.yml
datasets/: README.md
datasets/repositories/repo_001_fastapi_blog/: issues.jsonl  repo.yml
datasets/repositories/repo_002_go_url_shortener/: issues.jsonl  repo.yml
datasets/repositories/repo_003_express_todo_api/: issues.jsonl  repo.yml
datasets/repositories/repo_004_react_dashboard/: issues.jsonl  repo.yml
datasets/repositories/repo_005_flask_auth_service/: issues.jsonl  repo.yml
datasets/repositories/repo_006_go_grpc_inventory/: issues.jsonl  repo.yml
datasets/repositories/repo_007_django_shop/: issues.jsonl  repo.yml
datasets/repositories/repo_008_vue_notes_app/: issues.jsonl  repo.yml
datasets/repositories/repo_009_nestjs_payments/: issues.jsonl  repo.yml
datasets/repositories/repo_010_rust_cli_tool/: issues.jsonl  repo.yml
datasets/repositories/repo_011_python_etl_pipeline/: issues.jsonl  repo.yml
datasets/repositories/repo_012_node_ts_graphql/: issues.jsonl  repo.yml
experiments/: README.md  dense_models.yml
migrations/: 001_initial.sql  002_chunk_embeddings_multi_model.sql
scripts/: compare_reranker.py
src/gitflame_coderag/: schemas.py
src/gitflame_coderag/chunking/: ast_grep.py  config.py  datamodels.py
tests/integration/: test_storage.py
tests/unit/: test_ast_grep_chunking.py  test_ast_retrieval.py  test_bm25.py  test_embeddings.py  test_ingestion.py  test_reranker.py  test_retrieval.py
(+89 files in other folders)
