[project]
name = "gitflame-coderag"
version = "0.1.0"
description = "Hybrid code retrieval for GitFlame issue-to-plan and issue-to-code workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "sqlalchemy>=2.0",
    "transformers>=4.45,<4.46",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitflame_coderag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
